RESOLVED FIXED105436
[GTK][AC] setOpacity doesn't work for GraphicsLayerClutter
https://bugs.webkit.org/show_bug.cgi?id=105436
Summary [GTK][AC] setOpacity doesn't work for GraphicsLayerClutter
ChangSeok Oh
Reported 2012-12-19 07:56:58 PST
All panels in http://www.webkit.org/blog-files/3d-transforms/poster-circle.html should be transparent, but they aren't.
Attachments
Patch (5.46 KB, patch)
2012-12-19 08:18 PST, ChangSeok Oh
no flags
Patch (3.82 KB, patch)
2012-12-26 11:04 PST, ChangSeok Oh
no flags
Patch (3.80 KB, patch)
2013-01-21 11:39 PST, ChangSeok Oh
no flags
ChangSeok Oh
Comment 1 2012-12-19 08:18:55 PST
Joone Hur
Comment 2 2012-12-24 15:27:19 PST
Comment on attachment 180170 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=180170&action=review > Source/WebCore/platform/graphics/clutter/GraphicsLayerActor.cpp:597 > +void graphicsLayerActorSetOpacity(GraphicsLayerActor* layer, float value) I don't think we need to add this method. > Source/WebCore/platform/graphics/clutter/GraphicsLayerClutter.cpp:280 > + graphicsLayerActorSetOpacity(primaryLayer(), m_opacity); How about calling clutter_actor_set_opacity directly?
ChangSeok Oh
Comment 3 2012-12-26 11:04:31 PST
ChangSeok Oh
Comment 4 2012-12-26 11:07:40 PST
Comment on attachment 180170 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=180170&action=review Thanks for the comment! >> Source/WebCore/platform/graphics/clutter/GraphicsLayerActor.cpp:597 >> +void graphicsLayerActorSetOpacity(GraphicsLayerActor* layer, float value) > > I don't think we need to add this method. Done. I moved this part of the function into GraphicsLayerClutter::updateOpacityOnLayer. >> Source/WebCore/platform/graphics/clutter/GraphicsLayerClutter.cpp:280 >> + graphicsLayerActorSetOpacity(primaryLayer(), m_opacity); > > How about calling clutter_actor_set_opacity directly? Done.
Gustavo Noronha (kov)
Comment 5 2013-01-21 10:33:03 PST
Comment on attachment 180758 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=180758&action=review > Source/WebCore/ChangeLog:9 > + Added GraphicsLayerClutter::setOpacity & other stuff. Most codes to set opacity > + to GraphicsLayerClutter are taken from mac port. '& other stuff' doesn't add anything, maybe say 'and wire it to the layer sync mechanism.'? Also I'd say "Based on Mac's GraphicsLayer implementation" instead of the other sentence.
ChangSeok Oh
Comment 6 2013-01-21 11:39:02 PST
WebKit Review Bot
Comment 7 2013-01-21 12:24:15 PST
Comment on attachment 183810 [details] Patch Clearing flags on attachment: 183810 Committed r140350: <http://trac.webkit.org/changeset/140350>
WebKit Review Bot
Comment 8 2013-01-21 12:24:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.