[GTK][AC] setOpacity doesn't work for GraphicsLayerClutter https://bugs.webkit.org/show_bug.cgi?id=105436

Patch by ChangSeok Oh <shivamidow@gmail.com> on 2013-01-21
Reviewed by Gustavo Noronha Silva.

Implement GraphicsLayerClutter::setOpacity based on Mac's GraphicsLayer implementation.

No new tests since this patch can be covered by already existing gtk ac tests.

* platform/graphics/clutter/GraphicsLayerClutter.cpp:
(WebCore::GraphicsLayerClutter::setOpacity):
(WebCore):
(WebCore::GraphicsLayerClutter::updateOpacityOnLayer):
(WebCore::GraphicsLayerClutter::commitLayerChangesBeforeSublayers):
* platform/graphics/clutter/GraphicsLayerClutter.h:

Canonical link: https://commits.webkit.org/125702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140350 268f45cc-cd09-0410-ab3c-d52691b4dbfc